# mem-ising-nce-experiment

./: README.md
1_produce_observation_data/: produce_observation_data_from_simulator_records.py  produce_observation_data_from_spynnaker_records.py
2_ising_model_training/mem-ising-model-training-cpp/: .gitignore  CMakeLists.txt  Makefile  config.yaml  configuration_generator.cpp  dynamical-ising-training-main.cpp  essembly-avergae-inference.cpp  experiment-configuration-possibility-evaluation.cpp  partition-function-inference.cpp  training-main.cpp
2_ising_model_training/mem-ising-model-training-cpp/include/: macros.def
2_ising_model_training/mem-ising-model-training-cpp/include/inferencer/: inferencer.hpp
2_ising_model_training/mem-ising-model-training-cpp/include/mem_training/: mem_trainer.hpp
2_ising_model_training/mem-ising-model-training-cpp/include/models/: ising_model.hpp
2_ising_model_training/mem-ising-model-training-cpp/include/models/initializers/: base_initializer.hpp  normal_initializer.hpp
2_ising_model_training/mem-ising-model-training-cpp/include/utils/: ising_io.hpp  ising_model_utils.hpp
2_ising_model_training/mem-ising-model-training-cpp/src/inferencer/: inferencer.cpp
2_ising_model_training/mem-ising-model-training-cpp/src/mem_training/: mem_trainer.cpp
2_ising_model_training/mem-ising-model-training-cpp/src/models/: ising_model.cpp
2_ising_model_training/mem-ising-model-training-cpp/src/models/initializers/: normal_initializer.cpp
2_ising_model_training/mem-ising-model-training-cpp/src/utils/: ising_io.cpp  ising_model_utils.cpp
3_ising_spin_configuration_sampling/: config.yaml  sampling_ising_spin_configurations.py
4_energy_cost_evaluation/: config.yaml  evaluate_partitioning_cost.py
5_simulation_cost_evaluation/: config.yaml  lif-simulation-cost-evaluation.py
data/simulator-lif-spikes/logs-100000/: connection_0_12_0.weights  connection_0_24_0.weights  connection_10_4_0.weights  connection_10_9_0.weights  connection_11_10_0.weights  connection_11_18_0.weights  connection_11_20_0.weights  connection_12_10_0.weights  connection_12_10_1.weights  connection_12_14_0.weights  connection_12_15_0.weights  connection_12_19_0.weights  connection_12_19_1.weights  connection_12_1_0.weights  connection_12_1_1.weights  (+123 more)
lif-network-simulation/simulator/: .gitmodules  CMakeLists.txt  config.yaml  lif-simulation-config.yaml  lif-simulation-main.cpp  test_possion_lif_neurons.cpp
lif-network-simulation/simulator/snn-lib-cpp/: CMakeLists.txt  LICENSE  Makefile  README.md  config.yaml
lif-network-simulation/simulator/snn-lib-cpp/include/: macros.def
lif-network-simulation/simulator/snn-lib-cpp/include/connections/: all_to_all_conntection.hpp  connection.hpp  delay_conntection.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/interfaces/: function.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/network/: network.hpp  network_builder.hpp  parameters.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/network/initializer/: initializer.hpp  weight_initializers.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/neuron_models/: dynamical_neuron.hpp  initializer.hpp  lif_neuron.hpp  neuron.hpp  possion_neuron.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/recorder/: connection_recorder.hpp  neuron_recorder.hpp  recorder.hpp  recorder_function_examples.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/simulator/: snn_simulator.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/synapse_models/: synapse.hpp
lif-network-simulation/simulator/snn-lib-cpp/include/utils/: simulation_utils.hpp
lif-network-simulation/simulator/snn-lib-cpp/src/: snn-main.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/connections/: connection.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/lang/hl/: README.md
lif-network-simulation/simulator/snn-lib-cpp/src/network/: network.cpp  network_builder.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/network/configurations/: connection_configuration.cpp  neuron_configuration.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/network/initializer/: weight_initializer.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/neuron_models/: dynamical_neuron.cpp  lif_neuron.cpp  neuron.cpp  possion_neuron.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/recorder/: connection_recorder.cpp  neuron_recorder.cpp  recorder.cpp  recorder_function_examples.cpp  simulation_state_recorder.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/synapse_models/: synapse.cpp
lif-network-simulation/simulator/snn-lib-cpp/src/utils/: simulation_utils.cpp
pyclasses/: ising_inferencer.py  ising_model.py
utils/: utils.py
